--- a/python-server_side_rendering/templates/about.html
+++ b/python-server_side_rendering/templates/about.html
@@ -6,7 +6,7 @@
 <body>
     {% include 'header.html' %}
     <h1>About Us</h1>
-    <p>Information about our company.</p>
+    <p>This page provides information about our Flask application and its purpose.</p>
     {% include 'footer.html' %}
 </body>
 </html>
