--- a/python-server_side_rendering/templates/contact.html
+++ b/python-server_side_rendering/templates/contact.html
@@ -6,7 +6,7 @@
 <body>
     {% include 'header.html' %}
     <h1>Contact Us</h1>
-    <p>How to contact us.</p>
+    <p>Get in touch with us through this contact page.</p>
     {% include 'footer.html' %}
 </body>
 </html>
