--- a/python-server_side_rendering/templates/items.html
+++ b/python-server_side_rendering/templates/items.html
@@ -6,14 +6,15 @@
 <body>
     {% include 'header.html' %}
     <h1>Items List</h1>
-    <ul id="items">
-        {% for item in items %}
-            {% if items == 0 %}
-                <p>No items found</p>
-            {% else %}
-                <li><a href="{{item.href}}">{{item.caption}}</a></li>
-        {% endfor %}
-    </ul>
+    {% if items %}
+        <ul>
+            {% for item in items %}
+                <li>{{ item }}</li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>No items found</p>
+    {% endif %}
     {% include 'footer.html' %}
 </body>
 </html>
